--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,17 @@
 .App {
   display: flex;
   justify-content: center;
+  padding-top: 100px;
+}
+
+.container {
+  width: 500px;
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
   align-items: center;
-  min-height: 100vh;
+}
+
+.logo {
+  width: 50px;
 }
