--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
 .container {
   width: 500px;
   padding: 20px;
+  background-color: lightgreen;
   border-radius: 5px;
   border: 2px solid #caf3fe;
   display: flex;
