--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
   padding: 20px;
   background-color: lightgreen;
   border-radius: 5px;
-  border: 2px solid #caf3fe;
+  border: 3px solid #caf3fe;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -22,7 +22,6 @@
 
 
 .grid_container {
-  border: 1px solid #16697a;
   text-align: center;
 }
 
@@ -32,4 +31,20 @@
   background-color: lightgreen;
   cursor: pointer;
   text-align: center;
+}
+
+.bold_border_top {
+  border-top-width: 4px;
+}
+
+.bold_border_left {
+  border-left-width: 4px;
+}
+
+.bold_border_bottom {
+  border-bottom-width: 4px;
+}
+
+.bold_border_right {
+  border-right-width: 4px;
 }
